# huamengyun-qa-automation-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
docs/: interview-notes.md  test-strategy.md
huamengyun_qa_demo/: __init__.py  assertions.py  fake_api.py  models.py
test_data/: business_cases.json
tests/: conftest.py
tests/api/: test_ai_assistant.py  test_auth.py  test_member_points.py  test_order_payment_inventory.py  test_permission.py  test_product_catalog.py
tests/regression/: test_core_business_chain.py
